GNOME Bugzilla – Bug 721390
plugins: do not free debug category in finalize method
Last modified: 2015-04-28 02:11:14 UTC
This patch fixes a crash when multiple vaapidecode elements are finalized since the debug category is created once in the class init method. Looking at how gst debug category is used in the gstreamer code base (and how it is handled internally, ie: preprended to a "global" list), it does not feel wrong to me to not free the gstreamer debug category.
Created attachment 265215 [details] [review] plugins: do not free debug category in finalize method
I was sure it fixed a leak mentioned by valgrind, but OK to restore the behaviour to previous versions (<= 0.5.7).
commit 231a067cddc551955fadfb1021f8d6d2b0e1e1ca Author: Matthieu Bouron <matthieu.bouron@collabora.com> Date: Fri Jan 3 12:49:05 2014 +0000 plugins: do not free debug category in finalize method. Fixes a crash when multiple vaapidecode elements are finalized since the debug category is created once in the class init method. This is a regression from git commit 7e58d60. https://bugzilla.gnome.org/show_bug.cgi?id=721390 Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>